fix create new button spacing on mobile

--- a/src/ResumesComponent/styles.module.scss
+++ b/src/ResumesComponent/styles.module.scss
@@ -1,7 +1,9 @@
 @import "styles/common";
 
 .container {
-  margin-bottom: 8px;
+  .header-el {
+    margin-bottom: 12px;
+  }
 
   .cta-button-container {
     justify-self: center;
